@@ -1149,6 +1149,11 @@ $wgMessageStructure = array(
 		'recentchanges-legend',
 		'recentchangestext',
 		'recentchanges-feed-description',
+		'recentchanges-label-legend',
+		'recentchanges-label-newpage',
+		'recentchanges-label-minor',
+		'recentchanges-label-bot',
+		'recentchanges-label-unpatrolled',
 		'rcnote',
 		'rcnotefrom',
 		'rclistfrom',
@@ -1166,6 +1171,7 @@ $wgMessageStructure = array(
 		'minoreditletter',
 		'newpageletter',
 		'boteditletter',
+		'unpatrolledletter',
 		'sectionlink',
 		'number_of_watching_users_RCview',
 		'number_of_watching_users_pageview',
